vitis_workspace/.metadata/.plugins/org.eclipse.cdt.ui/lvds_test_app.build.log
18:10:48 **** Incremental Build of configuration Debug for project lvds_test_app ****
make all 
make --no-print-directory pre-build
a9-linaro-pre-build-step
' '
make --no-print-directory main-build
'Building file: ../src/helloworld.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/helloworld.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -IC:/Users/19165/Documents/Xilinx_Projects/SDO_LVDS/vitis_workspace/lvds_test_wrapper/export/lvds_test_wrapper/sw/lvds_test_wrapper/standalone_ps7_cortexa9_0/bspinclude/include -MMD -MP -MF"src/helloworld.d" -MT"src/helloworld.o" -o "src/helloworld.o" "../src/helloworld.c"
In file included from ../src/helloworld.c:25:
C:/Users/19165/Documents/Xilinx_Projects/SDO_LVDS/vitis_workspace/lvds_test_wrapper/export/lvds_test_wrapper/sw/lvds_test_wrapper/standalone_ps7_cortexa9_0/bspinclude/include/xbasic_types.h:102:2: warning: #warning The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert. [-Wcpp]
  102 | #warning  The xbasics_type.h file is deprecated and users should use xil_types.h and xil_assert.
      |  ^~~~~~~
C:/Users/19165/Documents/Xilinx_Projects/SDO_LVDS/vitis_workspace/lvds_test_wrapper/export/lvds_test_wrapper/sw/lvds_test_wrapper/standalone_ps7_cortexa9_0/bspinclude/include/xbasic_types.h:103:2: warning: #warning Please refer the Standalone BSP UG647 for further details [-Wcpp]
  103 | #warning  Please refer the Standalone BSP UG647 for further details
      |  ^~~~~~~
../src/helloworld.c: In function 'InitGPIO':
../src/helloworld.c:229:41: error: 'XPAR_AXI_GPIO_1_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_PS7_GPIO_0_DEVICE_ID'?
  229 | #define QSPI_GPIO                       XPAR_AXI_GPIO_1_DEVICE_ID
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/helloworld.c:486:48: note: in expansion of macro 'QSPI_GPIO'
  486 |         Status = XGpio_Initialize(&QSPI_xGPIO, QSPI_GPIO);
      |                                                ^~~~~~~~~
../src/helloworld.c:229:41: note: each undeclared identifier is reported only once for each function it appears in
  229 | #define QSPI_GPIO                       XPAR_AXI_GPIO_1_DEVICE_ID
      |                                         ^~~~~~~~~~~~~~~~~~~~~~~~~
../src/helloworld.c:486:48: note: in expansion of macro 'QSPI_GPIO'
  486 |         Status = XGpio_Initialize(&QSPI_xGPIO, QSPI_GPIO);
      |                                                ^~~~~~~~~
../src/helloworld.c: At top level:
../src/helloworld.c:868:6: warning: 'setQspiClk' defined but not used [-Wunused-function]
  868 | void setQspiClk(u8 clkState){
      |      ^~~~~~~~~~
../src/helloworld.c:792:6: warning: 'SetTimerDuration' defined but not used [-Wunused-function]
  792 | void SetTimerDuration(XInterval num10nsecCounts, u8 prescalar)
      |      ^~~~~~~~~~~~~~~~
../src/helloworld.c:699:6: warning: 'ChangeLvdsClkDivision' defined but not used [-Wunused-function]
  699 | void ChangeLvdsClkDivision(u8 divSetting)
      |      ^~~~~~~~~~~~~~~~~~~~~
make[1]: *** [src/subdir.mk:26: src/helloworld.o] Error 1
make: *** [makefile:34: all] Error 2

18:10:48 Build Finished (took 354ms)

